<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_title">Accessibility</string>
    <string name="account_management_disabled">Account management for \"%s\" has been disabled.</string>
    <string name="account_management_enabled">Account management for \"%s\" has been enabled.</string>
    <string name="account_management_title">Account management</string>
    <string name="account_migration_failed_message">Account failed to migrate:</string>
    <string name="account_type_hint">Enter an account type</string>
    <string name="actions_title">Actions:</string>
    <string name="activate_reset_password_token_cancelled">Token activation canceled</string>
    <string name="add">Add</string>
    <string name="add_account">Add account</string>
    <string name="add_account_dialog_title">Account name:</string>
    <string name="add_account_explanation">To add an account, select the corresponding option below. Select skip if you want to add it later:</string>
    <string name="add_account_later_message">Please add the account later.</string>
    <string name="add_account_skip">Skip</string>
    <string name="add_account_title">Provisioning finished successfully</string>
    <string name="add_account_with_name">Add account with name</string>
    <string name="add_cross_profile_app_widget_providers">Enable app widgets in a work profile app</string>
    <string name="add_cross_profile_app_widget_providers_title">Enable app widgets</string>
    <string name="add_cross_profile_intent_failed_msg">Cross-profile intent requires at least one action, category or scheme</string>
    <string name="add_cross_profile_intent_success_msg">Cross-profile intent filter has been added</string>
    <string name="add_cross_profile_intents_title">Add cross-profile intents</string>
    <string name="add_input_method_on_parent_fail">Failed to add input method on parent</string>
    <string name="add_network">Add network</string>
    <string name="affiliated_user">Affiliated user</string>
    <string name="affiliation_id_empty_error">Affiliation id cannot be empty</string>
    <string name="all_accessibility_services_enabled">All accessibility services are enabled</string>
    <string name="all_ca_certificates_removed">All CA certificates have been removed.</string>
    <string name="all_cross_profile_widget_providers_are_disabled">There is no widget from any of the work profile apps that is in enabled state.</string>
    <string name="all_cross_profile_widget_providers_are_enabled">There is no widget from any of the work profile apps that is in disabled state.</string>
    <string name="all_done">Setup finished successfully</string>
    <string name="all_done_explanation_device_owner">To manage the device open this application.</string>
    <string name="all_done_explanation_profile_owner">To manage the new managed profile, visit the badged version of this application.</string>
    <string name="all_input_methods_enabled">All input methods are enabled.</string>
    <string name="all_input_methods_on_parent">Allowed all input methods on parent</string>
    <string name="all_notification_listeners_enabled">All notification listeners are enabled.</string>
    <string name="allow_all">Allow all</string>
    <string name="allow_parent_profile_app_linking">Allow web links to apps of the parent</string>
    <string name="apn_apn_name">APN name</string>
    <string name="apn_auth_type">Authentication type</string>
    <string name="apn_carrier_enabled">Carrier enabled</string>
    <string name="apn_entry_name">Entry name</string>
    <string name="apn_entry_name_cannot_be_empty">Entry name cannot be empty</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mmsport">MMS proxy port</string>
    <string name="apn_mmsproxy">MMS proxy address</string>
    <string name="apn_mvno_type">MVNO type</string>
    <string name="apn_name_cannot_be_empty">APN name cannot be empty</string>
    <string name="apn_network_bitmask">Network type bitmask</string>
    <string name="apn_numeric">Operator numeric(MCC+MNC)</string>
    <string name="apn_numeric_hint">Numeric=MCC+MNC</string>
    <string name="apn_password">Password</string>
    <string name="apn_port">Proxy port</string>
    <string name="apn_protocol">Protocol</string>
    <string name="apn_proxy">Proxy address</string>
    <string name="apn_roaming_protocol">Roaming protocol</string>
    <string name="apn_type">Apn type bitmask</string>
    <string name="apn_type_cannot_be_zero">Apn type bitmask cannot be empty or zero</string>
    <string name="apn_user">User</string>
    <string name="apn_wrong_inetaddress">Cannot parse proxy address or MMS proxy address</string>
    <string name="apn_wrong_port">Cannot parse proxy port or MMS proxy port</string>
    <string name="apn_wrong_url">Cannot parse mmsc</string>
    <string name="app_feedback_notifications">App feedback notifications</string>
    <string name="app_name">Test DPC</string>
    <string name="app_permissions_empty">There are no permissions to display for this app.</string>
    <string name="app_restrictions_info">%1$s - %2$s</string>
    <string name="app_restrictions_key">Key:</string>
    <string name="app_restrictions_managing_package">App restrictions manager</string>
    <string name="app_restrictions_value">Value:</string>
    <string name="apps_management_title">Apps management</string>
    <string name="attestation_chain_length_description">Attestation chain length:</string>
    <string name="attestation_challenge_description">Attestation challenge:</string>
    <string name="attestation_details_header">Attestation record details:</string>
    <string name="attestation_root_description">Attestation root:</string>
    <string name="auto_brightness">Auto brightness</string>
    <string name="bind_device_admin_category_title">Bind to profile owner</string>
    <string name="bind_device_admin_policy_title">Bind to profile owner service</string>
    <string name="bind_to_profile_owner_failed">Failed to bind to profile owner. Is the user running/unlocked?</string>
    <string name="block">Block</string>
    <string name="block_uninstallation_by_pkg">Block uninstallation by package name</string>
    <string name="block_uninstallation_failed_invalid_pkgname">Could not update block uninstallation policy on an invalid package name.</string>
    <string name="block_uninstallation_list">Block uninstallation list</string>
    <string name="block_uninstallation_title">Block uninstallation</string>
    <string name="brand_attestation_checkbox">Include brand attestation only</string>
    <string name="bugreport_failure_exception">Cannot request bugreport: There are unaffiliated users on the device</string>
    <string name="bugreport_failure_failed_completing">Bugreport collection operation failed</string>
    <string name="bugreport_failure_file_no_longer_available">Bugreport file is no longer available for collection</string>
    <string name="bugreport_failure_message">Bugreport request failed: %s</string>
    <string name="bugreport_failure_throttled">Bugreport is already being collected on this device</string>
    <string name="bugreport_sharing_declined">User declined sharing bugreport</string>
    <string name="bugreport_title">Bugreport</string>
    <string name="camera_app_not_found">Ensure that a camera app is enabled</string>
    <string name="camera_title">Camera, screen capture and audio</string>
    <string name="cancel">Cancel</string>
    <string name="capture_image">Capture image</string>
    <string name="capture_video">Capture video</string>
    <string name="categories_title">Categories:</string>
    <string name="certificate_add_failed">\"%s\" certificate could not be installed.</string>
    <string name="certificate_added">\"%s\" certificate added.</string>
    <string name="certificate_alias_prompt_certificate_name">Certificate name:</string>
    <string name="certificate_alias_prompt_title">Name the certificate</string>
    <string name="certificate_management_title">Certificate management</string>
    <string name="certificate_password_prompt_enter_password">Type the password to extract the certificates.</string>
    <string name="certificate_password_prompt_incorrect">Type the correct password.</string>
    <string name="certificate_password_prompt_title">Extract certificate</string>
    <string name="check_lock_task_permitted">Check lock task permitted</string>
    <string name="check_lock_task_permitted_result_not_permitted">Lock task is not permitted.</string>
    <string name="check_lock_task_permitted_result_permitted">Lock task is permitted.</string>
    <string name="finish_setup">Finish setup</string>
    <string name="managed_account_complete_message">Added account that is now managed:</string>
    <string name="managed_account_message">Added account that requires management:</string>
    <string name="set_up_device_owner">Set up device owner</string>
    <string name="set_up_managed_profile">Set up managed profile</string>
    <string name="set_up_management_header">Set up management</string>
    <string name="setup_management_message">This app is currently not the owner of this device or profile. Please select an option below and tap Next to set up appropriate management by this app.</string>
</resources>